// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hover component name/attr Should show hover info on component attr 1`] = `
"
\`\`\`typescript
(property) attrTitle: string
\`\`\`
"
`;

exports[`Hover component name/attr show hover info on component name 1`] = `
"
\`\`\`typescript
(component) bazQux
bindings: {
    baz: \\"<\\" // number
    qux: \\"&?\\"
    title: \\"?@attrTitle\\" // string
}
\`\`\`
"
`;

exports[`Hover directive name/attr Should show hover info on directive attr 1`] = `
"
\`\`\`typescript
(attribute of [numberCheck]) canNaN: any
scope configs: \\"?<allowNan\\"
\`\`\`
"
`;

exports[`Hover directive name/attr show hover info on directive name 1`] = `
"
\`\`\`typescript
(directive) numberCheck
restrict: \\"A\\"
require: \\"ngModel\\"
scope: {
    min: \\"?<\\"
    max: \\"?<\\"
    canNaN: \\"?<allowNan\\"
}
\`\`\`
"
`;

exports[`Hover ng-* show hover info on ng-if 1`] = `
"
\`\`\`typescript
(directive) ngIf
\`\`\`
Angular.js built-in directive, see [document](https://docs.angularjs.org/api/ng/directive/ngIf)."
`;
